# rust-common-lib

./: .gitignore  CONVENTIONS.md  Cargo.toml  GEMINI.md  test_all.sh
crates/common/: Cargo.toml
crates/common/src/: http_client.rs  lib.rs  local_date_time.rs  prelude.rs  scalar.rs
crates/common/tests/: http_client_tests.rs  prelude_tests.rs  scalar_tests.rs
